fix: correct label wrapping

--- a/components/progressbar/index.css
+++ b/components/progressbar/index.css
@@ -78,7 +78,7 @@ governing permissions and limitations under the License.
 }
 
 .spectrum-ProgressBar-label {
-  flex: 0 1 0%;
+  flex: 1 1 0%;
 }
 
 .spectrum-ProgressBar-percentage {
